Color email + phone number icons

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ nav.shift ul li a:hover:after {
 }
 
 .contact-left p i{
-    color: #ff004f;
+    color: #e7bcff;
     margin-right: 15px;
     font-size: 25px;
 }
