--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Georgia, serif;
+    font-family: Poppins;
     box-sizing: border-box;
 }
 
@@ -16,10 +16,8 @@ body {
 
 #header {
     width: 100%;
-    height: 100vh;
-    background-color: #e7bcff;
-    border: 4px blue; 
-
+    height: 120vh;
+    background: linear-gradient(#ff914d, #fd786c);
 }
 
 .header-logo {
@@ -85,7 +83,7 @@ nav.shift ul li a:after {
     height: 1 px;
     content: '.';
     color: transparent;
-    background: #D3D3D3;
+    background: #5B7C99;
     border-radius: 10px;
     visibility: none;
     opacity: 0;
@@ -112,15 +110,38 @@ nav.shift ul li a:hover:after {
     color: #fff;
 }
 
+.header-text p {
+    font-size: 25px;
+    color: #fff;
+}
+
 .header-text p span {
-    font-size: 15px;
+    font-size: 17px;
     color: #262626;
+    line-height: 1.5em;
+    min-height: 1em; 
+    display: block; 
+    padding-left: 1px;
 }
 
 .btn.btn3 {
     display:inline-block;
+    background-color:rgba(255, 255, 255, 0.5); 
     border: 2px solid #262626;
     color: #262626;
+}
+
+.btn.btn4 {
+    display:inline-block;
+    background-color:rgba(255, 255, 255, 0.5); 
+    border: 2px solid #fff;
+    color: #262626;
+    margin-left: 10px; 
+    margin-top: -5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 /* about section */
@@ -136,15 +157,18 @@ nav.shift ul li a:hover:after {
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1 {
+.about-col-2 {
     flex-basis: 35%;
 }
-.about-col-1 img{
-    width: 100%;
+.about-col-2 img{
+    width: 93%;
     border-radius: 15px;
+    margin-top: 100px;
+    margin-left: 30px;
+    border: 3px solid #e7bcff;
 }
 
-.about-col-2 {
+.about-col-1 {
     flex-basis: 60%;
 }
 
@@ -182,6 +206,27 @@ nav.shift ul li a:hover:after {
     width: 60%;
 }
 
+.tab-contents ul {
+    line-height: 1em; 
+}
+
+.tab-contents p {
+    line-height: 1em; 
+}
+
+.tab-contents span ul li {
+    list-style-type: circle;
+
+    padding-left: 1em;
+    text-indent: -1em;
+    list-style-position: inside;
+}
+
+.tab-contents span {
+    font-size: 16px;
+    line-height: 1.2em; 
+}
+
 .tab-contents ul li {
     list-style: none;
     margin: 10px 0;
@@ -200,23 +245,37 @@ nav.shift ul li a:hover:after {
     display: block;
 }
 
-/* lately */
+.recognition ul li span {
+    color: rgb(255, 255, 148);
+}
 
+/* projects */
 #lately {
+    background-color: #5B7C99;
     padding: 30px 0;
+    color: #fff;
+}
+
+.sub-sub-title {
+    font-size: 30px;
+    color: #5B7C99; 
+}
+
+.ongoing {
+    font-size: 30px;
+    color: #ff914d;
 }
 
 .lately-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 90px;
+    margin-top: 10px;
 }
 
 .lately-list div {
-    background: #262626;
-    padding: 40px;
-    font-size: 13px;
+    padding: 20px;
+    font-size: 12px;
     font-weight: 300;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
@@ -228,13 +287,22 @@ nav.shift ul li a:hover:after {
 }
 
 .lately-list div h2 {
-    font-size: 30px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: bold;
     margin-bottom: 15px;
+    line-height: 1.15em;
+}
+.lately-list div h3 {
+    font-weight: 500;
+}
+
+.lately-list p {
+    font-size: 14px;
 }
 
 .lately-list span {
     font-size: 15px;
+    padding-left: 3px;
 }
 
 .lately-list div a{
@@ -246,94 +314,23 @@ nav.shift ul li a:hover:after {
 }
 
 .lately-list div:hover{
-    background: #6B6B6B;
+    background: linear-gradient(#6B6B6B, #5B7C99);
     transform: translateY(-10px);
 }
 
-/* projects */
-
-#projects {
-    padding: 50px 0;
-}
-.work-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-}
-.work {
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-}
-.work img {
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-    transition: transform 0.5s
+.lately-list div.ongoing-hover:hover{
+    background: linear-gradient(#ff914d, #6B6B6B);
+    transform: translateY(-10px);
 }
 
-.layer{
-    width: 100%;
-    height: 0;
-    background: linear-gradient(rgba(117, 116, 116, 0.6), #fcfc99);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 14px;
-    transition: height 0.8s;
-    color: #262626;
+.lately-list span:hover {
+    color: #ff914d;
+    margin-left: 10px; 
 }
 
-.layer h3{
-    font-weight: 500;
-    margin-bottom: 20px;
-    color: #fff;
-}
-
-.layer a{
-    margin-top: 20px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 60px;
-    background: #e7bcff;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    text-align: center;
-}
-
-.work:hover img{
-    transform: scale(1.1);
-}
-
-.work:hover .layer{
-    height: 100%;
-}
-
-.btn {
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #fff;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #e7bcff;
-    transition: background 0.5s;
-}
-
-.btn:hover {
-    background: #fff;
+.lately-list span {
+    color: #ff914d;
+    margin-left: -4px;
 }
 
 /* contact */
@@ -350,9 +347,13 @@ nav.shift ul li a:hover:after {
 }
 
 .contact-left p i{
-    color: #fcfc99;
+    color: #e7bcff;
     margin-right: 15px;
     font-size: 25px;
+}
+
+.contact-right button {
+    font-size: 15px; 
 }
 
 .social-icons {
@@ -379,16 +380,34 @@ nav.shift ul li a:hover:after {
     color: #e7bcff;
 }
 
+.btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #fff;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #e7bcff;
+    transition: background 0.5s;
+}
+
+.btn:hover {
+    background: #5B7C99;
+    color: #fff;
+}
+
 .contact-right form{
     width: 100%; 
 }
 form input, form textarea{
-    width:100%;
-    border:0;
+    width:90%;
+    border: 3px solid #e7bcff;
+    
     outline: none;
-    background: #fff;
-    padding: 15px;
-    margin: 15px;
+    background: #e5e5e5;
+    padding: 10px;
+    margin: 10px;
     color: #262626;
     font-size: 18px;
     border-radius: 6px;
@@ -405,8 +424,8 @@ form .btn2 {
 .copyright{
     width: 100%;
     text-align: center;
-    padding: 25px 0;
-    background: #e7bcff;
+    padding: 60px 0;
+    background: linear-gradient(#fd786c, #ff914d);
     font-weight: 300;
     margin-top: 20px;
     color: #262626
@@ -429,8 +448,8 @@ form .btn2 {
 } */
 
 #msg{
-    color: #fff;
-    margin-top: -10px;
+    margin-top: -40px;
+    margin-left: 10px;
     display: block;
 }
 
