--- a/style.css
+++ b/style.css
@@ -5,6 +5,50 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color:#000; 
+}
+
+.scroll-down {
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  z-index: 100;
+  text-decoration: none;
+  text-shadow: 0;
+  width: 20px;
+  height: 20px;
+  border-bottom: 4px solid #5B7C99;
+  border-right: 4px solid #5B7C99;
+  z-index: 9;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%) rotate(45deg);
+  -moz-transform: translate(-50%, 0%) rotate(45deg);
+  transform: translate(-50%, 0%) rotate(45deg);
+  -webkit-animation: fade_move_down 3s ease infinite;
+  -moz-animation:    fade_move_down 3s ease infinite;
+  animation:         fade_move_down 3s ease infinite;
+}
+
+@-webkit-keyframes fade_move_down {
+  0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  80%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@-moz-keyframes fade_move_down {
+  0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  80%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@keyframes fade_move_down {
+  0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+  80%  { opacity: 1;  }
+  100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+
 #loading-screen {
     font-size: 30px;
     position: fixed;
@@ -240,6 +284,7 @@ nav.shift ul li a:hover:after {
 
 .header-text h1 span {
     color: #fff;
+
 }
 
 .header-text p {
@@ -261,6 +306,7 @@ nav.shift ul li a:hover:after {
     background-color:rgba(255, 255, 255, 0.5); 
     border: 2px solid #262626;
     color: #262626;
+    margin-top: 25px;
 }
 
 .btn.btn4 {
