--- a/style.css
+++ b/style.css
@@ -272,6 +272,10 @@ nav.shift ul li a:hover:after {
     height: 100%;
 }
 
+#aka {
+    color: skyblue;
+}
+
 .header-text {
     margin-top: 20%; 
     font-size: 30px;
